--- a/css/index.css
+++ b/css/index.css
@@ -243,6 +243,14 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@keyframes mymove {
+  from {
+    left: 0px;
+  }
+  to {
+    left: 200px;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
