--- a/less/home-page.less
+++ b/less/home-page.less
@@ -20,6 +20,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @keyframes mymove {
+      from {left: 0px;}
+      to {left: 200px;}
+    }
    
     
     .text-content {
